@@ -2,6 +2,9 @@
 
 FROM ubuntu:16.04
 
+# Setup systemctl
+COPY ./systemctl.py /usr/bin/systemctl
+
 # Install packages
 RUN apt-get update
 RUN apt -y install openssh-client procps apache2 hdparm unzip lsb-release python
@@ -11,6 +14,9 @@ RUN a2enmod ssl
 RUN apt -y install iputils-ping
 
 RUN apt -y install default-jdk tomcat7 tomcat7-*
+
+# Re-setup systemctl (this might be overriden by the above)
+COPY ./systemctl.py /usr/bin/systemctl
 
 # set time
 ENV TZ=UTC
